--- a/client/index.css
+++ b/client/index.css
@@ -7,32 +7,45 @@
 body { 
   font: 13px, Helvetica, Arial; 
 }
-form { 
+#root {
+  width: 100%;
+  height: 100%;
+}
+.new-message-form { 
   background: #000; 
   padding: 3px; 
   position: fixed; 
   bottom: 0; 
   width: 100%; 
 }
-form input[type=text] { 
+.new-message-form input[type=text] { 
   border: 0; 
   padding: 10px; 
   width: 90%; 
   margin-right: .5% 
 }
-form input[type=submit] { 
+.new-message-form input[type=submit] { 
   width: 9%; 
   background: rgb(130, 224, 255); 
   border: none; 
   padding: 10px; 
 }
-#messages {
+.messages, .users {
   list-style-type: none; 
-  margin: 0; padding: 0; 
+  margin: 0; padding: 0;
+  display: inline-block;
+  vertical-align: top;
+  overflow-y: auto;
 }
-#messages li { 
+.messages {
+  width: 75%;
+}
+.users {
+  width: 25%;
+}
+.messages li, .users li { 
   padding: 5px 10px; 
 }
-#messages li:nth-child(odd) {
+.messages li:nth-child(odd), .users li:nth-child(odd) {
   background: #eee;
 }
